[package]
name = "pi-telegram-modem-dooropener"
version = "0.1.0"
edition = "2021"
authors = ["Hans-Joachim Krauch"]

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
pretty_env_logger = "0.4"
serde = "1.0.137"
serde_json = "1.0.81"
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-serial = "5.4.1"
tokio-util = { version = "0.6.0", features = ["codec"] }
